[gd_scene load_steps=12 format=3 uid="uid://cbf0nvx5pbanu"]

[ext_resource type="Texture2D" uid="uid://o0rnoarmmj4t" path="res://assets/enemies/explosion.png" id="1_b225o"]
[ext_resource type="Script" path="res://scenes/entities/asteroid_3.gd" id="1_t0ba4"]
[ext_resource type="Texture2D" uid="uid://bn6opwq27w5u7" path="res://assets/environment/asteroid_3.png" id="2_d53vs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_max1n"]
atlas = ExtResource("1_b225o")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y83f8"]
atlas = ExtResource("1_b225o")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i75h3"]
atlas = ExtResource("1_b225o")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dju0m"]
atlas = ExtResource("1_b225o")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j35y"]
atlas = ExtResource("1_b225o")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_equkf"]
atlas = ExtResource("2_d53vs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mpewo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_max1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y83f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i75h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dju0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j35y")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_equkf")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8m85c"]
radius = 30.0
height = 62.0

[node name="Asteroid3" type="Area2D"]
collision_layer = 32
collision_mask = 10
script = ExtResource("1_t0ba4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_mpewo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8m85c")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(1, -0.5)
scale = Vector2(3.1, 3.15)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
